# ResearchMind

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  docker-compose.yml  dvc.yaml  locustfile.py  misclassified_32.txt  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: Dockerfile  app.py  models.py  retriever.py
configs/: demo.yaml  full.yaml  phase2.yaml  seeds.yaml  semantic.yaml
data/processed/: 200_test_queries_set.json.dvc  cleaned_chunks.jsonl.dvc  demo.dvc  parsed_papers.jsonl.dvc
demo/: Dockerfile  Home.py  README.md  config.py
demo/pages/: Agent_Chat.py  Search.py
experiments/: 60_query_test_set.json  locust_load_test.py  researchmind_query_results.json
experiments/locust_results/: 100users_10rampup_report.html  100users_10ramup.csv  100users_10ramup_stats.csv  10users_2rampup_report.html  10users_2rampup_stats.csv  50users_5ramup.html  50users_5ramup_stats.csv
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: researchmind.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: build_demo.py  build_indexes.py  generate_test_set.py
src/researchmind/: metrics.py
src/researchmind/agent/: agent_utils.py  graph.py  router.py  state.py  tools.py  tracing.py
src/researchmind/chunker/: chunker.py  clean_chunk_section.py
src/researchmind/embedding/: models.py
src/researchmind/evaluation/: embedding_benchmark.py  faiss_benchmark.py  phase3_eval.py  phase3_eval_temporal.py  phase4_eval.py  phase5_eval.py  phase6_eval.py  ragas_harness.py  retrieval_benchmark.py  test_set_generator.py
src/researchmind/feedback/: interfaces.py  loop.py  simulate_ratings.py  store.py
src/researchmind/graph/: citation_graph.py
src/researchmind/guardrails/: pipeline.py  validators.py
src/researchmind/ingestion/: __init__.py  arxiv_client.py  downloader.py  fetch_foundational_papers.py  models.py  openalex_client.py  pdf_parser.py  pipeline.py  s3_downloader.py
src/researchmind/ingestion/chunking/: __init__.py  clean_chunk_section.py  fixed_chunker.py  interfaces.py  pipeline.py  section_chunker.py  semantic_chunker.py
src/researchmind/ingestion/discovery/: __init__.py  _client.py  arxiv.py  arxiv_source.py  interfaces.py  pipeline.py  semantic_scholar.py  semantic_scholar_citations.py  semantic_scholar_enricher.py  semantic_scholar_recommendations.py  (+1 more)
src/researchmind/mcp_server/: config.py  server.py
src/researchmind/retrieval/: bm25_index.py  chroma_store.py  faiss_index.py  interfaces.py  query_intelligence.py  retriever.py  rrf.py  temporal.py  vector_store.py
src/researchmind/session/: cache.py  interfaces.py  memory.py  redis_backend.py
src/researchmind/utils/: build_prompt.py  config.py  datatypes.py  experiment_logger.py  find_root.py  llm_client.py  llm_client_old.py  logging.py
tests/: test_api.py
worker/: Dockerfile  tasks.py
(+8 files in other folders)
