[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "researchmind"
version = "0.1.0"
description = "Enterprise R&D Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    # Data fetching
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    # Embeddings and ML
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    # API serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    # LLM
    "anthropic>=0.28.0",
    # Experiment tracking and data versioning
    "mlflow>=2.13.0",
    "dvc[s3]>=3.51.0",
    # Utilities
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "arxiv>=3.0.0",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/researchmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
